# Mili--BNN-TMR

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
api/: __init__.py
api/python/: __init__.py  chip_api.py
ate/: hardware_bridge.py  mili_ate_program.py  test_limits.yaml
ate/patterns/: scan_basic.hex
config/: chip_spec.yaml
data/: mnist.mili
docs/: API_REFERENCE.md  DATASHEET.md  HARDWARE_REVISION.md  INTEGRATION.md  RADIATION_VALIDATION.md  RELEASE.md  SAD.md  TAPEOUT.md
drivers/: Makefile  README.md
drivers/common/: mili_chip.c  mili_hal.c  mili_hal.h  mili_regs.h
drivers/freertos/: mili_stm32h7_spi.c
drivers/linux/: Makefile  mili_pcie.c
drivers/simulator/: mili_dpi.cpp  mili_sim_hal.c
drivers/tests/: test_driver.c
drivers/zephyr/: CMakeLists.txt  Kconfig  mili_zephyr.c
examples/: quickstart_classify.py
firmware/: Makefile  bootloader.c
fpga/: Makefile  filelist.f  vivado_synth.tcl
fpga/constraints/: artix7_dev.xdc
integration/board/: dev_board.yaml
integration/stm32/: host_bridge.c
production/: qc_checklist.yaml
release/: RELEASE_NOTES_v1.0.md  sdk_manifest.yaml
release/certifications/: do254.yaml  ecss.yaml
rtl/: dpm_ctrl.sv  ecc_codec.sv  i2c_if.sv  mili_chip_top.sv  mili_pkg.sv  pcie_if.sv  pcie_phy_gen4.sv  pcie_pkg.sv  pcie_tlp.sv  pe.sv  reg_file.sv  spi_if.sv  sram_bank.sv  sram_ctrl.sv  sram_macro.sv  systolic_array.sv  tmr_triplex.sv  tmr_voter.sv  uart_if.sv
scripts/: ensure_mnist_model.py  generate_benchmark.py  run_e2e_demo.py
sim/: README.md
sim/verilator/: Makefile  filelist.f  signoff_gate.sh  tb_pe.cpp  tb_systolic.cpp  tb_tmr.cpp  tb_top.cpp  tb_triplex.cpp
src/mili_bnn_tmr/: __init__.py  cli.py  compile_cli.py  config.py  e2e_cli.py  radiation_cli.py  release_cli.py  silicon_revision.py  support_cli.py  tapeout_cli.py
tapeout/: Makefile
tapeout/constraints/: mili_chip.sdc
tapeout/gds/: .gitkeep
tapeout/packaging/: bga484_land_pattern.csv  bga484_pinout.yaml
tests/: conftest.py  test_benchmark.py  test_certification_gaps.py  test_chip_api.py  test_compiler.py  test_config.py  test_delivery_gaps.py  test_dpm.py  test_drivers.py  test_e2e.py  test_hardware_gaps.py  test_hardware_gaps_phase2.py  test_mili_format.py  test_module_coverage.py  test_quantizer.py  test_radiation.py  test_release.py  test_rtl_gaps.py  test_runtime.py  test_tapeout.py  test_tmr.py  test_toolchain_gaps.py
zephyr_app/: CMakeLists.txt  prj.conf
(+66 files in other folders)
