[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mili-bnn-tmr"
version = "0.1.0"
description = "Edge AI Accelerator Chip with Systolic Array + TMR"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "onnx>=1.14",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
mili-benchmark = "mili_bnn_tmr.cli:main"
mili-compile = "mili_bnn_tmr.compile_cli:main"
mili-e2e = "mili_bnn_tmr.e2e_cli:main"
mili-radiation = "mili_bnn_tmr.radiation_cli:main"
mili-tapeout = "mili_bnn_tmr.tapeout_cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["mili_bnn_tmr*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
