[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mili-bnn-tmr"
version = "1.0.0"
description = "Edge AI Accelerator Chip with Systolic Array + TMR"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ml = [
    "onnx>=1.14",
    "torch>=2.0",
]
tflite = [
    "tflite-runtime>=2.14; platform_system != 'Windows'",
    "tensorflow>=2.14; platform_system == 'Windows'",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "scikit-learn>=1.3",
]

[project.scripts]
mili-benchmark = "mili_bnn_tmr.cli:main"
mili-compile = "mili_bnn_tmr.compile_cli:main"
mili-e2e = "mili_bnn_tmr.e2e_cli:main"
mili-radiation = "mili_bnn_tmr.radiation_cli:main"
mili-tapeout = "mili_bnn_tmr.tapeout_cli:main"
mili-release = "mili_bnn_tmr.release_cli:main"
mili-support = "mili_bnn_tmr.support_cli:main"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["mili_bnn_tmr*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/mili_bnn_tmr", "api"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/compile_cli.py",
    "*/e2e_cli.py",
    "*/radiation_cli.py",
    "*/release_cli.py",
    "*/tapeout_cli.py",
    "*/cli.py",
    "*/tflite_compiler.py",
    "*/pytorch_compiler.py",
]

[tool.coverage.report]
fail_under = 80
